# 6502

./: .babelrc  .eslintrc.json  .gitignore  .prettierrc.json  CMakeLists.txt  README.md  package-lock.json  package.json  tsconfig.json
.circleci/: config.yml
.cmake/: common_properties.cmake  global_includes.cmake  global_options.cmake  make_application.cmake  make_catch2_test.cmake  make_library.cmake  make_mock.cmake  make_test.cmake  make_test_exe.cmake  setup_catch2.cmake  setup_code_formatter.cmake  setup_compiler_cache.cmake  setup_sanitizers.cmake  setup_time_trace.cmake  utility_functions.cmake  xcode_properties.cmake
.documentation/: building.md  caching.md  cmake.md  cplusplus.md  help.js  javascript.md  scripts.md
.scripts/: build-timing.js  build.js  format-on-build.js  format-utilities.js  format.js  install-cmake.sh  merge-vars.js
modules/core/: CMakeLists.txt
modules/core/source/core/: FlagController.cpp  FlagController.h  Flags.cpp  Flags.h  ProgramCounter.cpp  ProgramCounter.h  Registers.cpp  Registers.h  StackPointer.cpp  StackPointer.h
modules/core/tests/: TestFlags.cpp  TestProgramCounter.cpp  TestRegisters.cpp  TestStackPointer.cpp
modules/cpu/: CMakeLists.txt
modules/cpu/source/cpu/: CPU.cpp  CPU.h  Flags.cpp  Flags.h  Instruction.h  ProgramCounter.cpp  ProgramCounter.h  Registers.cpp  Registers.h  StackPointer.cpp  StackPointer.h
modules/cpu/tests/: TestCPU.cpp  TestFlags.cpp  TestProgramCounter.cpp  TestRegisters.cpp  TestStackPointer.cpp
modules/instructions/: CMakeLists.txt
modules/instructions/source/instructions/: CL.cpp  CL.h  CLC.cpp  CLC.h  Instruction.h  LD.cpp  LD.h  LDA.cpp  LDA.h  LDX.cpp  LDX.h  LDY.cpp  LDY.h  NOP.cpp  NOP.h
modules/instructions/tests/: TestCLC.cpp  TestCLD.cpp  TestCLI.cpp  TestCLV.cpp  TestLDA.cpp  TestLDX.cpp  TestLDY.cpp  TestNOP.cpp
modules/memory/: CMakeLists.txt
modules/memory/source/memory/: Memory.cpp  Memory.h
modules/memory/tests/: TestMemory.cpp
modules/utils/: CMakeLists.txt
modules/utils/mocks/utils/: MockFileDownloader.cpp  MockFileDownloader.h
modules/utils/source/utils/: FileDownloader.cpp  FileDownloader.h
modules/utils/tests/: TestFileDownloader.cpp
project/macOS/: Info.plist  document.icns  icon.icns
project/source/: main.cpp
project/windows/: resources.rc
